2005-07-29  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/event/MouseWheelEvent.java: fixed typo in API docs.
	
2005-07-29  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/DefaultStyledDocument.java: Added
	comments all over.
	* javax/swing/text/StyledEditorKit: Likewise.

2005-07-29  Lillian Angel  <langel@redhat.com>
	
	* javax/swing/JTextField.java
	(insertString): Added in check for null to resolve a NPE.
	* javax/swing/text/GapContent.java
	(getOffset): Added in check for mark = gapStart because
	if mark = gapStart = 0, then a negative is returned. This was
	not right.

2005-07-29  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicEditorPaneUI.java: Added API
	comments all over.
	* javax/swing/plaf/basic/BasicTextUI.java: Likewise.
	
2005-07-29  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/DefaultStyledDocument.java
	(split): Moved throw statement into proper else clause.
	* javax/swing/text/StyledEditorKit.java
	(StyledViewFactory.create): Return the actual view instead of null.

2005-07-29  Roman Kennke  <roman@kennke.org>

	* javax/swing/JTextPane.java: Added API comments all over.

2005-07-29  Roman Kennke  <roman@kennke.org>

	* javax/swing/JTextPane.java
	(constructor()): Implemented this constructor. Initialize the
	EditorKit and set the Document to null.
	(constructor(StyledDocument)): Implemented this constructor.
	Initialize the EditorKit and Document.
	(getUIClassID): Inlined the constant String.
	(setDocument): Implemented this method.
	(getStyledDocument): Likewise.
	(setStyledDocument): Likewise.
	(replaceSelection): Likewise.
	(insertComponent): Clarified the TODO comment.
	(insertIcon): Clarified the TODO comment.
	(addStyle): Implemented this method.
	(removeStyle): Likewise.
	(getStyle): Likewise.
	(getLogicalStyle): Likewise.
	(setLogicalStyle): Likewise.
	(getCharacterAttributes): Likewise.
	(setCharacterAttributes): Likewise.
	(getParagraphAttributes): Likewise.